# macropad_core

./: CMakeLists.txt
src/: main.cpp
